# cli

./: pyproject.toml  setup.py
.github/workflows/: publish.yml
reocities/: __init__.py  cli.py
